--- a/ze/ze_meta_parameters.yaml
+++ b/ze/ze_meta_parameters.yaml
@@ -7,11 +7,11 @@ meta_parameters:
     - [ OutScalar, version ]
   zeDriverGetProperties:
     - [ OutScalar, pDriverProperties ]
-  zeDriverGetIPCProperties:
-    - [ OutScalar, pIPCProperties ]
-  zeDriverGetExtensionFunctionAddress:
-    - [ InString, pFuncName ]
-    - [ OutScalar, pfunc ]
+  zeDriverGetIpcProperties:
+    - [ OutScalar, pIpcProperties ]
+  zeDriverGetExtensionProperties:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, pExtensionProperties, pCount ]
   zeDeviceGet:
     - [ InOutScalar, pCount ]
     - [ OutArray, phDevices, pCount ]
@@ -22,8 +22,11 @@ meta_parameters:
     - [ OutScalar, pDeviceProperties ]
   zeDeviceGetComputeProperties:
     - [ OutScalar, pComputeProperties ]
-  zeDeviceGetKernelProperties:
-    - [ OutScalar, pKernelProperties ]
+  zeDeviceGetModuleProperties:
+    - [ OutScalar, pModuleProperties ]
+  zeDeviceGetCommandQueueGroupProperties:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, pCommandQueueGroupProperties, pCount ]
   zeDeviceGetMemoryProperties:
     - [ InOutScalar, pCount ]
     - [ OutArray, pMemProperties, pCount ]
@@ -33,10 +36,15 @@ meta_parameters:
     - [ OutScalar, pCacheProperties ]
   zeDeviceGetImageProperties:
     - [ OutScalar, pImageProperties ]
+  zeDeviceGetExternalMemoryProperties:
+    - [ OutScalar, pExternalMemoryProperties ]
   zeDeviceGetP2PProperties:
     - [ OutScalar, pP2PProperties ]
   zeDeviceCanAccessPeer:
     - [ OutScalar, value ]
+  zeContextCreate:
+    - [ InScalar, desc ]
+    - [ OutScalar, phContext ]
   zeCommandQueueCreate:
     - [ InScalar, desc ]
     - [ OutScalar, phCommandQueue ]
@@ -68,6 +76,9 @@ meta_parameters:
     - [ InScalar, desc->pConstants ]
     - [ InArray, desc->pConstants->pConstantIds, desc->pConstants->numConstants ]
     - [ InArray, desc->pConstants->pConstantValues, desc->pConstants->numConstants ]
+  zeModuleDynamicLink:
+    - [ InArray, phModules, numModules ]
+    - [ OutScalar, phLinkLog ]
   zeModuleBuildLogGetString:
     - [ InOutScalar, pSize ]
     - [ OutArray, pBuildLog, pSize ]
@@ -94,13 +105,15 @@ meta_parameters:
     - [ OutScalar, totalGroupCount ]
   zeKernelSetArgumentValue:
     - [ InArray, pArgValue, argSize ]
-  zeKernelSetAttribute:
-    - [ InArray, pValue, size ]
-  zeKernelGetAttribute:
+  zeKernelGetIndirectAccess:
+    - [ OutScalar, pFlags ]
+  zeKernelGetSourceAttributes:
     - [ InOutScalar, pSize ]
-    - [ OutArray, pValue, pSize ]
   zeKernelGetProperties:
     - [ OutScalar, pKernelProperties ]
+  zeKernelGetName:
+    - [ InOutScalar, pSize ]
+    - [ OutString, pName, pSize ]
   zeCommandListAppendLaunchKernel:
     - [ InScalar, pLaunchFuncArgs ]
     - [ InArray, phWaitEvents, numWaitEvents ]
@@ -112,12 +125,19 @@ meta_parameters:
   zeCommandListAppendLaunchMultipleKernelsIndirect:
     - [ InArray, phKernels, numKernels ]
     - [ InArray, phWaitEvents, numWaitEvents ]
-  zeDeviceRegisterCLMemory:
-    - [ OutScalar, ptr ]
-  zeDeviceRegisterCLProgram:
-    - [ OutScalar, phModule ]
-  zeDeviceRegisterCLCommandQueue:
-    - [ OutScalar, phCommandQueue ]
+  zeSamplerCreate:
+    - [ InScalar, desc ]
+    - [ OutScalar, phSampler ]
+  zeVirtualMemReserve:
+    - [ OutScalar, pptr ]
+  zeVirtualMemQueryPageSize:
+    - [ OutScalar, pagesize ]
+  zePhysicalMemCreate:
+    - [ InScalar, desc ]
+    - [ OutScalar, phPhysicalMemory ]
+  zeVirtualMemGetAccessAttribute:
+    - [ OutScalar, access ]
+    - [ OutScalar, outSize ]
   zeEventPoolCreate:
     - [ InScalar, desc ]
     - [ InArray, phDevices, numDevices ]
@@ -131,30 +151,31 @@ meta_parameters:
     - [ OutScalar, phEventPool ]
   zeCommandListAppendWaitOnEvents:
     - [ InArray, phEvents, numEvents ]
-  zeEventGetTimestamp:
-    - [ OutScalar, dstptr, 'YAMLCAst::CustomType::new(name: "uint64_t")' ]
-  zeSamplerCreate:
-    - [ InScalar, desc ]
-    - [ OutScalar, phSampler ]
-  zeDriverAllocSharedMem:
+  zeEventQueryKernelTimestamp:
+    - [ OutScalar, dstptr ]
+  zeCommandListAppendQueryKernelTimestamps:
+    - [ InArray, phEvents, numEvents ]
+    - [ InArray, pOffsets, numEvents ]
+    - [ InArray, phWaitEvents, numWaitEvents ]
+  zeMemAllocShared:
     - [ InScalar, device_desc ]
     - [ InScalar, host_desc ]
     - [ OutScalar, pptr ]
-  zeDriverAllocDeviceMem:
+  zeMemAllocDevice:
     - [ InScalar, device_desc ]
     - [ OutScalar, pptr ]
-  zeDriverAllocHostMem:
+  zeMemAllocHost:
     - [ InScalar, host_desc ]
     - [ OutScalar, pptr ]
-  zeDriverGetMemAllocProperties:
+  zeMemGetAllocProperties:
     - [ OutScalar, pMemAllocProperties ]
     - [ OutScalar, phDevice ]
-  zeDriverGetMemAddressRange:
+  zeMemGetAddressRange:
     - [ OutScalar, pBase ]
     - [ OutScalar, pSize ]
-  zeDriverGetMemIpcHandle:
+  zeMemGetIpcHandle:
     - [ OutScalar, pIpcHandle ]
-  zeDriverOpenMemIpcHandle:
+  zeMemOpenIpcHandle:
     - [ OutScalar, pptr ]
   zeFenceCreate:
     - [ InScalar, desc ]
