--- a/ze/zes_meta_parameters.yaml
+++ b/ze/zes_meta_parameters.yaml
@@ -1,65 +1,76 @@
 ---
 meta_parameters:
-  zesGet:
-    - [ OutScalar, phSysman ]
   zesDeviceGetProperties:
     - [ OutScalar, pProperties ]
-  zesSchedulerGetSupportedModes:
-    - [ InOutScalar, pCount ]
-    - [ OutArray, pModes, pCount ]
-  zesSchedulerGetCurrentMode:
-    - [ OutScalar, pMode ]
-  zesSchedulerGetTimeoutModeProperties:
-    - [ OutScalar, pConfig ]
-  zesSchedulerGetTimesliceModeProperties:
-    - [ OutScalar, pConfig ]
-  zesSchedulerSetTimeoutMode:
-    - [ OutScalar, pProperties ]
-    - [ OutScalar, pNeedReload ]
-  zesSchedulerSetTimesliceMode:
-    - [ OutScalar, pProperties ]
-    - [ OutScalar, pNeedReload ]
-  zesSchedulerSetExclusiveMode:
-    - [ OutScalar, pNeedReload ]
-  zesSchedulerSetComputeUnitDebugMode:
-    - [ OutScalar, pNeedReload ]
-  zesPerformanceProfileGetSupported:
-    - [ InOutScalar, pCount ]
-    - [ OutArray, pProfiles, pCount ]
-  zesPerformanceProfileGet:
-    - [ OutScalar, pProfile ]
-  zesProcessesGetState:
+  zesDeviceGetState:
+    - [ OutScalar, pState ]
+  zesDeviceProcessesGetState:
     - [ InOutScalar, pCount ]
     - [ OutArray, pProcesses, pCount ]
-  zesDeviceGetRepairStatus:
-    - [ OutScalar, pRepairStatus ]
-  zesPciGetProperties:
+  zesDevicePciGetProperties:
     - [ OutScalar, pProperties ]
-  zesPciGetState:
+  zesDevicePciGetState:
     - [ OutScalar, pState ]
-  zesPciGetBars:
+  zesDevicePciGetBars:
     - [ InOutScalar, pCount ]
     - [ OutArray, pProperties, pCount ]
-  zesPciGetStats:
+  zesDevicePciGetStats:
     - [ OutScalar, pStats ]
-  zesPowerGet:
+  zesDeviceEnumDiagnosticTestSuites:
     - [ InOutScalar, pCount ]
-    - [ OutArray, phPower, pCount ]
-  zesPowerGetProperties:
+    - [ OutArray, phDiagnostics, pCount ]
+  zesDiagnosticsGetProperties:
     - [ OutScalar, pProperties ]
-  zesPowerGetEnergyCounter:
-    - [ OutScalar, pEnergy ]
-  zesPowerGetLimits:
-    - [ OutScalar, pSustained ]
-    - [ OutScalar, pBurst ]
-    - [ OutScalar, pPeak ]
-  zesPowerSetLimits:
-    - [ InScalar, pSustained ]
-    - [ InScalar, pBurst ]
-    - [ InScalar, pPeak ]
-  zesPowerGetEnergyThreshold:
-    - [ OutScalar, pThreshold ]
-  zesFrequencyGet:
+  zesDiagnosticsGetTests:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, pTests, pCount ]
+  zesDiagnosticsRunTests:
+    - [ OutScalar, pResult ]
+  zesDeviceEnumEngineGroups:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phEngine, pCount ]
+  zesEngineGetProperties:
+    - [ OutScalar, pProperties ]
+  zesEngineGetActivity:
+    - [ OutScalar, pStats ]
+  zesDriverEventListen:
+    - [ InArray, phDevices, count ]
+    - [ OutScalar, pNumDeviceEvents ]
+    - [ OutArray, pEvents, count ]
+  zesDeviceEnumFabricPorts:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phPort, pCount ]
+  zesFabricPortGetProperties:
+    - [ OutScalar, pProperties ]
+  zesFabricPortGetLinkType:
+    - [ OutScalar, pLinkType ]
+  zesFabricPortGetConfig:
+    - [ OutScalar, pConfig ]
+  zesFabricPortSetConfig:
+    - [ InScalar, pConfig ]
+  zesFabricPortGetState:
+    - [ OutScalar, pState ]
+  zesFabricPortGetThroughput:
+    - [ OutScalar, pThroughput ]
+  zesDeviceEnumFans:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phFan, pCount ]
+  zesFanGetProperties:
+    - [ OutScalar, pProperties ]
+  zesFanGetConfig:
+    - [ OutScalar, pConfig ]
+  zesFanSetFixedSpeedMode:
+    - [ InScalar, speed ]
+  zesFanSetSpeedTableMode:
+    - [ InScalar, speedTable ]
+  zesFanGetState:
+    - [ OutScalar, pSpeed ]
+  zesDeviceEnumFirmwares:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phFirmware, pCount ]
+  zesFirmwareGetProperties:
+    - [ OutScalar, pProperties ]
+  zesDeviceEnumFrequencyDomains:
     - [ InOutScalar, pCount ]
     - [ OutArray, phFrequency, pCount ]
   zesFrequencyGetProperties:
@@ -77,37 +88,27 @@ meta_parameters:
     - [ OutScalar, pThrottleTime ]
   zesFrequencyOcGetCapabilities:
     - [ OutScalar, pOcCapabilities ]
-  zesFrequencyOcGetConfig:
-    - [ OutScalar, pOcConfiguration ]
-  zesFrequencyOcSetConfig:
-    - [ InScalar, pOcConfiguration ]
-    - [ OutScalar, pDeviceRestart ]
+  zesFrequencyOcGetFrequencyTarget:
+    - [ OutScalar, pCurrentOcFrequency ]
+  zesFrequencyOcGetVoltageTarget:
+    - [ OutScalar, pCurrentVoltageTarget ]
+    - [ OutScalar, pCurrentVoltageOffset ]
+  zesFrequencyOcGetMode:
+    - [ OutScalar, pCurrentOcMode ]
   zesFrequencyOcGetIccMax:
     - [ OutScalar, pOcIccMax ]
   zesFrequencyOcGetTjMax:
     - [ OutScalar, pOcTjMax ]
-  zesEngineGet:
+  zesDeviceEnumLeds:
     - [ InOutScalar, pCount ]
-    - [ OutArray, phEngine, pCount ]
-  zesEngineGetProperties:
+    - [ OutArray, phLed, pCount ]
+  zesLedGetProperties:
     - [ OutScalar, pProperties ]
-  zesEngineGetActivity:
-    - [ OutScalar, pStats ]
-  zesStandbyGet:
-    - [ InOutScalar, pCount ]
-    - [ OutArray, phStandby, pCount ]
-  zesStandbyGetProperties:
-    - [ OutScalar, pProperties ]
-  zesStandbyGetMode:
-    - [ OutScalar, pMode ]
-  zesFirmwareGet:
-    - [ InOutScalar, pCount ]
-    - [ OutArray, phFirmware, pCount ]
-  zesFirmwareGetProperties:
-    - [ OutScalar, pProperties ]
-  zesFirmwareGetChecksum:
-    - [ OutScalar, pChecksum ]
-  zesMemoryGet:
+  zesLedGetState:
+    - [ OutScalar, pState ]
+  zesLedSetColor:
+    - [ InScalar, pColor ]
+  zesDeviceEnumMemoryModules:
     - [ InOutScalar, pCount ]
     - [ OutArray, phMemory, pCount ]
   zesMemoryGetProperties:
@@ -116,58 +117,38 @@ meta_parameters:
     - [ OutScalar, pState ]
   zesMemoryGetBandwidth:
     - [ OutScalar, pBandwidth ]
-  zesFabricPortGet:
+  zesDeviceEnumPerformanceFactorDomains:
     - [ InOutScalar, pCount ]
-    - [ OutArray, phPort, pCount ]
-  zesFabricPortGetProperties:
+    - [ OutArray, phPerf, pCount ]
+  zesPerformanceFactorGetProperties:
     - [ OutScalar, pProperties ]
-  zesFabricPortGetLinkType:
-    - [ OutScalar, pLinkType ]
-  zesFabricPortGetConfig:
-    - [ OutScalar, pConfig ]
-  zesFabricPortSetConfig:
-    - [ InScalar, pConfig ]
-  zesFabricPortGetState:
-    - [ OutScalar, pState ]
-  zesFabricPortGetThroughput:
-    - [ OutScalar, pThroughput ]
-  zesTemperatureGet:
+  zesPerformanceFactorGetConfig:
+    - [ OutScalar, pFactor ]
+  zesDeviceEnumPowerDomains:
     - [ InOutScalar, pCount ]
-    - [ OutArray, phTemperature, pCount ]
-  zesTemperatureGetProperties:
+    - [ OutArray, phPower, pCount ]
+  zesPowerGetProperties:
     - [ OutScalar, pProperties ]
-  zesTemperatureGetConfig:
-    - [ OutScalar, pConfig ]
-  zesTemperatureSetConfig:
-    - [ InScalar, pConfig ]
-  zesTemperatureGetState:
-    - [ OutScalar, pTemperature ]
-  zesPsuGet:
+  zesPowerGetEnergyCounter:
+    - [ OutScalar, pEnergy ]
+  zesPowerGetLimits:
+    - [ OutScalar, pSustained ]
+    - [ OutScalar, pBurst ]
+    - [ OutScalar, pPeak ]
+  zesPowerSetLimits:
+    - [ InScalar, pSustained ]
+    - [ InScalar, pBurst ]
+    - [ InScalar, pPeak ]
+  zesPowerGetEnergyThreshold:
+    - [ OutScalar, pThreshold ]
+  zesDeviceEnumPsus:
     - [ InOutScalar, pCount ]
     - [ OutArray, phPsu, pCount ]
   zesPsuGetProperties:
     - [ OutScalar, pProperties ]
   zesPsuGetState:
     - [ OutScalar, pState ]
-  zesFanGet:
-    - [ InOutScalar, pCount ]
-    - [ OutArray, phFan, pCount ]
-  zesFanGetProperties:
-    - [ OutScalar, pProperties ]
-  zesFanGetConfig:
-    - [ OutScalar, pConfig ]
-  zesFanSetConfig:
-    - [ InScalar, pConfig ]
-  zesFanGetState:
-    - [ OutScalar, pSpeed ]
-  zesLedGet:
-    - [ InOutScalar, pCount ]
-    - [ OutArray, phLed, pCount ]
-  zesLedGetProperties:
-    - [ OutScalar, pProperties ]
-  zesLedGetState:
-    - [ OutScalar, pState ]
-  zesRasGet:
+  zesDeviceEnumRasErrorSets:
     - [ InOutScalar, pCount ]
     - [ OutArray, phRas, pCount ]
   zesRasGetProperties:
@@ -178,25 +159,77 @@ meta_parameters:
     - [ InScalar, pConfig ]
   zesRasGetState:
     - [ OutScalar, pState ]
-  zesEventGet:
-    - [ OutScalar, phEvent ]
-  zesEventGetConfig:
-    - [ OutScalar, pConfig ]
-  zesEventSetConfig:
-    - [ InScalar, pConfig ]
-  zesEventGetState:
-    - [ OutScalar, pEvents ]
-  zesEventListen:
-    - [ InArray, phEvents, count ]
-    - [ OutScalar, pEvents ]
-  zesDiagnosticsGet:
+  zesDeviceEnumSchedulers:
     - [ InOutScalar, pCount ]
-    - [ OutArray, phDiagnostics, pCount ]
-  zesDiagnosticsGetProperties:
+    - [ OutArray, phScheduler, pCount ]
+  zesSchedulerGetProperties:
     - [ OutScalar, pProperties ]
-  zesDiagnosticsGetTests:
+  zesSchedulerGetCurrentMode:
+    - [ OutScalar, pMode ]
+  zesSchedulerGetTimeoutModeProperties:
+    - [ OutScalar, pConfig ]
+  zesSchedulerGetTimesliceModeProperties:
+    - [ OutScalar, pConfig ]
+  zesSchedulerSetTimeoutMode:
+    - [ OutScalar, pProperties ]
+    - [ OutScalar, pNeedReload ]
+  zesSchedulerSetTimesliceMode:
+    - [ OutScalar, pProperties ]
+    - [ OutScalar, pNeedReload ]
+  zesSchedulerSetExclusiveMode:
+    - [ OutScalar, pNeedReload ]
+  zesSchedulerSetComputeUnitDebugMode:
+    - [ OutScalar, pNeedReload ]
+  zesDeviceEnumStandbyDomains:
     - [ InOutScalar, pCount ]
-    - [ OutArray, pTests, pCount ]
-  zesDiagnosticsRunTests:
-    - [ OutScalar, pResult ]
+    - [ OutArray, phStandby, pCount ]
+  zesStandbyGetProperties:
+    - [ OutScalar, pProperties ]
+  zesStandbyGetMode:
+    - [ OutScalar, pMode ]
+  zesDeviceEnumTemperatureSensors:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phTemperature, pCount ]
+  zesTemperatureGetProperties:
+    - [ OutScalar, pProperties ]
+  zesTemperatureGetConfig:
+    - [ OutScalar, pConfig ]
+  zesTemperatureSetConfig:
+    - [ InScalar, pConfig ]
+  zesTemperatureGetState:
+    - [ OutScalar, pTemperature ]
+  zesGetDriverProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetDeviceProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetSchedulerProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetPerformanceFactorProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetPowerProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetFrequencyProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetEngineProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetStandbyProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetFirmwareProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetMemoryProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetFabricPortProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetTemperatureProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetPsuProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetFanProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetLedProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetRasProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetDiagnosticsProcAddrTable:
+    - [ OutScalar, pDdiTable]
 
