--- a/opencl/opencl_infos.yaml
+++ b/opencl/opencl_infos.yaml
@@ -556,3 +556,22 @@ cl_profiling_info:
   2_0:
   - name: CL_PROFILING_COMMAND_COMPLETE
     type: cl_ulong
+cl_kernel_exec_info:
+  2_0:
+  - name: CL_KERNEL_EXEC_INFO_SVM_PTRS
+    type: uintptr_t
+    array: true
+  - name: CL_KERNEL_EXEC_INFO_SVM_FINE_GRAIN_SYSTEM
+    type: cl_bool
+  - name: CL_KERNEL_EXEC_INFO_SVM_PTRS_ARM
+    type: uintptr_t
+    array: true
+  - name: CL_KERNEL_EXEC_INFO_INDIRECT_HOST_ACCESS_INTEL
+    type: cl_bool
+  - name: CL_KERNEL_EXEC_INFO_INDIRECT_DEVICE_ACCESS_INTEL
+    type: cl_bool
+  - name: CL_KERNEL_EXEC_INFO_INDIRECT_SHARED_ACCESS_INTEL
+    type: cl_bool
+  - name: CL_KERNEL_EXEC_INFO_USM_PTRS_INTEL
+    type: uintptr_t
+    array: true
