Added probes to list driver and device properties.

--- a/ze/Makefile
+++ b/ze/Makefile
@@ -7,7 +7,7 @@ ZE_OBJS = $(ZE_PROBES:=.o)
 ZE_INCL = $(ZE_PROBES:=.h)
 ZE_SRC = $(ZE_PROBES:=.c)
 
-ZE_STATIC_PROBES = ze_profiling
+ZE_STATIC_PROBES = ze_profiling ze_properties
 ZE_STATIC_TP = $(ZE_STATIC_PROBES:=.tp)
 ZE_STATIC_OBJS = $(ZE_STATIC_PROBES:=.o)
 ZE_STATIC_INCL = $(ZE_STATIC_PROBES:=.h)
@@ -15,7 +15,7 @@ ZE_STATIC_SRC = $(ZE_STATIC_PROBES:=.c)
 
 ZE_EXTRACT = extract_base.rb modified_include
 ZE_EXTRACTED = ze_api.yaml zet_api.yaml zes_api.yaml
-ZE_MODEL = ze_model.rb ../utils/yaml_ast.rb ze_meta_parameters.yaml zet_meta_parameters.yaml zes_meta_parameters.yaml $(ZE_EXTRACTED)
+ZE_MODEL = ze_model.rb ../utils/yaml_ast.rb ze_meta_parameters.yaml zet_meta_parameters.yaml zes_meta_parameters.yaml ze_events.yaml $(ZE_EXTRACTED)
 
 ZE_BINDINGS = ze_bindings.rb ze_refinements.rb
 
@@ -45,6 +45,9 @@ zes_api.yaml: $(shell find modified_include/ -type f) $(ZE_EXTRACT) extract_zes.
 
 ze_profiling.tp: gen_ze_custom_probes.rb ../utils/LTTng.rb $(ZE_MODEL)
 	ruby gen_ze_custom_probes.rb lttng_ust_ze_profiling > $@
+
+ze_properties.tp: gen_ze_custom_probes.rb ../utils/LTTng.rb $(ZE_MODEL)
+	ruby gen_ze_custom_probes.rb lttng_ust_ze_properties > $@
 
 %.tp: %.rb $(ZE_MODEL) gen_probe_base.rb
 	ruby $*.rb > $@
